@@ -10,7 +10,7 @@ Description: S4 classes around infrastructure
   development with data cloning for hierarchical 
   models easy as a breeze.
 License: GPL-2
-Depends: R (>= 2.15.0), methods, stats4, dclone (>= 1.7-2), rjags, 
+Depends: R (>= 2.15.0), methods, stats4, dclone (>= 2.0-0), rjags, 
   coda, R2WinBUGS, parallel, lattice
 Suggests: snow
 SystemRequirements: JAGS (>= 3.0.0)
