@@ -27,7 +27,11 @@ Objects can be created by calls of the form \code{new("gsFit", ...)}.
         \code{\link[dclone]{bugs.fit}} or argument.}
     \item{\code{flavour}:}{Object of class \code{"character"},
         same as corresponding \code{\link[dclone]{dc.fit}} argument,
-        default is \code{"jags"}.}
+        default is \code{"jags"}.
+        It can also be \code{"winbugs"},
+        \code{"openbugs"}, or \code{"brugs"} referring to
+        the \code{argument} of \code{\link{bugs.fit}},
+        in which case \code{flavour} will be treated as \code{"bugs"}.}
   }
 }
 \section{Methods}{
